<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GUI_Test3Activity!</string>
    <string name="app_name">"  Meine Einkaufslisten"</string>
    <string name="btn_neueEinkaufsliste">Neue Einkaufsliste</string>
    <string name="btn_artikelVerwalten">Artikel \n verwalten</string>
    <string name="btn_beenden">Beenden</string>
    <string name="txt_keineEinkaufsliste">Es sind keine Einkaufslisten vorhanden. Klicken Sie \"Neue Einkaufsliste\" um eine neue Liste hinzuzufügen</string>
    <string name="txt_keineArtikel">Es sind keine Artikel vorhanden. Klicken Sie \"Artikel hinzfügen\" um neue Artikel hinzuzufügen</string>
	<string name="main_no_items">No items</string>
    <string name="checkbox_text">Selected</string>
    
        
    <string name="btn_Klick">Neue Einkaufsliste</string>
    <string name="txt_Name">"Name: "</string>
    <string name="txt_Vorlage">"Vorlage: "</string>
    <string name="btn_OK">OK</string>
    <string name="btn_Cancel">Abbrechen</string>
    <string name="txt_Delete">Sind Sie sicher, dass Sie die Einkaufsliste löschen wollen?</string>
    <string name="btn_delEK">Einkaufsliste löschen</string>
    <string name="btn_editKategorie">Kategorie bearbeiten</string>
    <string name="btn_delKategorie">Kategorie löschen</string>
    <string name="btn_newKategorie">Neue Kategorie</string>
    <string name="txt_delKategorie">Wollen Sie die Kategorie mit ALLEN Artikeln wirklich löschen?</string>
    <string name="edit_art">Artikel bearbeiten</string>
    <string name="btn_delArt">Artikel löschen</string>
    <string name="btn_newArt">Neuer Artikel</string>
    <string name="txt_delArt">Soll der Artikel wirklich gelöscht werden?</string>
    <string name="txt_editArt_Einheit">Einheit:</string>
    <string name="txt_editArt_Kategorie">Kategorie:</string>
    <string name="btn_del_ek_OK">Ja</string>
    <string name="btn_del_ek_cancel">Nein</string>
    <string name="btn_del_kat_OK">Ja</string>
    <string name="btn_del_kat_Cancel">Nein</string>
    <string name="btn_delart_OK">Ja</string>
    <string name="btn_delart_Cancel">Nein</string>
    <string name="btn_editName_OK">OK</string>
    <string name="btn_editName_Cancel">Abbrechen</string>
    <string name="btn_editName">Name \n ändern</string>
    <string name="btn_emptyList">Einkaufsliste leeren</string>
    <string name="txt_emptyList">Wollen Sie alle Artikel von der Einkaufsliste entfernen?</string>
    <string name="btn_emptyList_OK">Ja</string>
    <string name="btn_emptyList_Cancel">Nein</string>
    <string name="btn_EK_zuruecksetzen">Einkaufsliste zurücksetzen?</string>
    <string name="txt_EK_zuruecksetzen">Wollen Sie alle Artikel wieder in den Status OFFEN zurücksetzen?</string>
    <string name="btn_zuruecksetzen_OK">Ja</string>
    <string name="btn_zuruecksetzen_Cancel">Nein</string>
    <string name="btn_JA">Ja</string>
    <string name="btn_Nein">Nein</string>
    <string name="addArt">Artikel hinzufügen</string>
    <string name="btn_save">Übernehmen</string>
    <string name="txt_ek_erledigt">Alle Artikel der Einkaufsliste wurden eingekauft. Wollen Sie die Einkaufsliste wegwerfen? Die Liste wird dann unwiderruflich gelöscht.</string>
    <string name="btn_katAnzeigen">Kategorien anzeigen</string>
    <string name="btn_offeneArt">Offene Artikel</string>
    <string name="btn_zuruecksetzen">Zurücksetzen</string>
    <string name="btn_alleArt">Alle Artikel</string>
    <string name="btn_KatVerbergen">Kategorien verbergen</string>
    <color name="button_background_color">#FFFFFF</color>
    <string name="bottom_button_height">50dp</string>
    <string name="title_edit_list">"  Einkaufsliste bearbeiten"</string>
    <string name="title_add_article">"  Artikel zur Einkaufsliste hinzufügen"</string>
    <string name="title_use_list">"  Einkaufsliste verwenden"</string>
    <string name="btn_showKat">Kategorie anzeigen</string>
    <string name="btn_offeneArtikel">Offene Artikel</string>
    <string name="btn_hideKat">Kategorie verbergen</string>
    <string name="title_artdb">"  Artikeldatenbank"</string>
    <string name="txt_empty_usedlist">Es sind keine offenen Artikel vorhanden.</string>

</resources>