<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
   >

    <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/txt_editArt_Name"
            android:text="Name:"
            android:width="120px" />

        <EditText
            android:id="@+id/txtfield_Name"
            android:width="300px" />

    </TableRow> 

    <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/txt_editArt_Einheit"
            android:text="@string/txt_editArt_Einheit" />

        <Spinner
            android:id="@+id/spinnerVorlage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>
    
        <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/txt_editArt_Kategorie"
            android:text="@string/txt_editArt_Kategorie" />

        <Spinner
            android:id="@+id/spinnerVorlage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <Button
        android:id="@+id/btn_editArt_OK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtComments"
        android:layout_below="@+id/txtComments"
        android:text="@string/btn_OK" />

    <Button
        android:id="@+id/btn_editArt_Cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_Cancel" />
        
    </RelativeLayout>

</TableLayout>