<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ExpandableListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_bottom"
        android:drawSelectorOnTop="true" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/btn_addArt"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:text="@string/addArt" />

        <Button
            android:id="@+id/btn_editName"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:text="@string/btn_editName" />

        <Button
            android:id="@+id/btn_emptyList"
            android:layout_width="106dp"
            android:layout_height="fill_parent" 
            android:text="@string/btn_emptyList" />
    </LinearLayout>

</RelativeLayout>