<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
    android:background="#E6E6E6"
   >

    <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/text_Name"
            android:text="Name:"
            android:width="120px"
            android:textColor="#4C66FF"/>

        <EditText
            android:id="@+id/txtfield_newArt"
            android:width="300px" />

    </TableRow> 

    <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/text_Vorlage"
            android:text="@string/txt_editArt_Einheit" 
            android:textColor="#4C66FF"/>

        <Spinner
            android:id="@+id/spinner_newArt_Einheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>
    
        <TableRow android:gravity="center" >



        <TextView
            android:id="@+id/txt_editArt_Kategorie"
            android:text="@string/txt_editArt_Kategorie"
            android:textColor="#4C66FF" />

        <Spinner
            android:id="@+id/spinner_newArt_Kategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>
    
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	<TableRow>
    <Button
        android:id="@+id/btn_newArt_OK"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignLeft="@+id/txtComments"
        android:layout_below="@+id/txtComments"
        android:layout_marginRight="3px"
        android:text="@string/btn_OK"
        android:background="@color/btn_hintergrund"
        android:textColor="@color/btn_text" />

    <Button
        android:id="@+id/btn_newArt_Cancel"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_Cancel"
        android:background="@color/btn_hintergrund"
        android:textColor="@color/btn_text" />
        
    </TableRow>
    </TableLayout>

</TableLayout>