<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center|center_horizontal|center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="51dp" >

        <Button
            android:id="@+id/btn_GUI_ek_KatVerbergen_02"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_KatVerbergen" />

        <Button
            android:id="@+id/btn_GUI_ek_alleArt_02"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_alleArt" />

        <Button
            android:id="@+id/btn_GUI_ek_zuruecksetzen_02"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_zuruecksetzen" />

    </RelativeLayout>

</LinearLayout>