<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_delArt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtComments"
            android:layout_below="@+id/txtComments"
            android:text="@string/btn_JA" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_Nein" />
    </RelativeLayout>

</RelativeLayout>