<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center|center_horizontal|center_vertical"
    android:orientation="vertical" 
    android:background="@color/background_list">

    <ExpandableListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       	android:layout_weight="0.98"
        android:drawSelectorOnTop="true" />
    
    <LinearLayout
        android:id="@+id/linear_emptylist"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_weight="0.98"
        android:gravity="center_vertical" >


        <TextView
            android:id="@+id/txt_emptylist"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:text="@string/txt_keineArtikel"
            android:textColor="@color/list_txt" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TableRow>

        <Button
            android:id="@+id/btn_hideKat"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="2px"
            android:background="@color/btn_hintergrund"
            android:text="@string/btn_hideKat"
            android:textColor="@color/btn_text" />

        <Button
            android:id="@+id/btn_alleArtikel"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="2px"
            android:background="@color/btn_hintergrund"
            android:text="@string/btn_alleArt"
            android:textColor="@color/btn_text" />

        <Button
            android:id="@+id/btn_zuruecksetzen"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/btn_hintergrund"
            android:text="@string/btn_zuruecksetzen"
            android:textColor="@color/btn_text" />

        </TableRow>
    </TableLayout>

</LinearLayout>