<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E6E6E6" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_emptyList"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="#4C66FF"/>

    </LinearLayout>

   <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		<TableRow>
    <Button
        android:id="@+id/btn_emptyList_OK"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignLeft="@+id/txtComments"
        android:layout_below="@+id/txtComments"
        android:layout_marginRight="3px"
        android:text="@string/btn_JA" 
        android:background="@color/btn_hintergrund"
        android:textColor="@color/btn_text"/>

    <Button
        android:id="@+id/btn_emptyList_Cancel"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_Nein" 
        android:background="@color/btn_hintergrund"
        android:textColor="@color/btn_text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>